--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get: ^4.6.6
   image_picker: ^1.1.2
   intl: ^0.19.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
