--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -40,6 +39,8 @@ dependencies:
   cloud_firestore: ^5.4.4
   get: ^4.6.6
   image_picker: ^1.1.2
+  intl: ^0.19.0
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
