--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   dropdown_button2: ^2.3.9
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
