--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   intl: ^0.19.0
   dropdown_button2: ^2.3.9
   http: ^1.2.2
+  speech_to_text: ^7.0.0
+  fl_chart: ^0.65.0
+  pdf: ^3.6.0
+  printing: ^5.6.0
 
 dev_dependencies:
   flutter_test:
