--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   fl_chart: ^0.65.0
   pdf: ^3.6.0
   printing: ^5.6.0
+  firebase_storage: ^12.3.7
 
 dev_dependencies:
   flutter_test:
