--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,13 @@ dependencies:
   pdf: ^3.6.0
   printing: ^5.6.0
   firebase_storage: ^12.3.7
+  google_fonts: ^6.2.1
+  url_launcher: ^6.3.1
+  glassmorphism: ^3.0.0
+  shared_preferences: ^2.3.3
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.10.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
